[package]
name = "rannounce-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
new-rawr = {git = "https://github.com/RileyMShea/new-rawr", package = "new-rawr"}
rpassword = "7.2.0"
